Fix: samll therapists images seems blurred in profil user

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -8,6 +8,11 @@
   overflow: hidden;
   border-radius: 50%;
 }
+.th-img{
+  display: block;
+  width: 75px;
+  height: 75px;
+}
 img.image-profile {
   border-radius: 50%;
   aspect-ratio: 1/1;
